Closed
Bug 1544897
Opened 6 years ago
Closed 6 years ago
Preemptively fix all non-unified-build bustage in layout/base, layout/generic, layout/build
Categories
(Core :: Layout, defect, P3)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla68
| Tracking | Status | |
|---|---|---|
| firefox68 | --- | fixed |
People
(Reporter: dholbert, Assigned: dholbert)
Details
Attachments
(1 file)
(previously: bug 1541137, bug 1541150)
Did some mindless background work in a meeting today, to fix build warnings/errors in builds with unification disabled in layout/generic, layout/base, and layout/build. I identified the issues by removing "UNIFIED_" from these directories' moz.build files and then trying to build.
Here are the build warnings/errors that I'm addressing here:
../../../mozilla/layout/base/ScrollStyles.cpp:12:57: error: variable has incomplete type 'mozilla::WritingMode'
void ScrollStyles::InitializeScrollSnapType(WritingMode aWritingMode,
^
../../../mozilla/layout/base/PresShell.cpp:1186:27: error: member access into incomplete type 'MobileViewportManager'
mMobileViewportManager->Destroy();
^
../../../mozilla/layout/base/nsIPresShell.h:77:7: note: forward declaration of 'MobileViewportManager'
class MobileViewportManager;
^
../../dist/include/mozilla/dom/Document.h:1268:25: warning: inline function 'mozilla::dom::Document::GetPresContext' is not defined [-Wundefined-inline]
inline nsPresContext* GetPresContext() const;
^
../../../mozilla/layout/base/PresShell.cpp:8257:35: note: used here
nsPresContext* context = doc->GetPresContext();
^
../../dist/include/mozilla/dom/Document.h:1268:25: warning: inline function 'mozilla::dom::Document::GetPresContext' is not defined [-Wundefined-inline]
inline nsPresContext* GetPresContext() const;
^
../../../mozilla/layout/base/nsDocumentViewer.cpp:1231:43: note: used here
nsPresContext* presContext = mDocument->GetPresContext();
^
../../../mozilla/layout/build/nsLayoutModule.h:21:37: error: unknown type name 'nsISupports'
nsresult CreateXMLContentSerializer(nsISupports* aOuter, const nsID& aIID,
^
../../../mozilla/layout/build/nsLayoutModule.h:21:64: error: unknown type name 'nsID'
nsresult CreateXMLContentSerializer(nsISupports* aOuter, const nsID& aIID,
^
In file included from ../../../mozilla/layout/build/nsLayoutModule.cpp:7:
../../../mozilla/layout/build/nsLayoutModule.h:46:1: error: no template named 'already_AddRefed'
already_AddRefed<nsIPresentationService> NS_CreatePresentationService();
^
../../../mozilla/layout/build/nsLayoutStatics.cpp:323:3: error: use of undeclared identifier 'ThirdPartyUtil'; did you mean 'mozIThirdPartyUtil'?
ThirdPartyUtil::Startup();
^~~~~~~~~~~~~~
mozIThirdPartyUtil
../../dist/include/mozilla/ServoStyleSet.h:306:42: warning: inline function 'mozilla::ServoStyleSet::ResolveServoStyle' is not defined [-Wundefined-inline]
inline already_AddRefed<ComputedStyle> ResolveServoStyle(const dom::Element&);
^
../../../mozilla/layout/generic/nsFrameSetFrame.cpp:288:32: note: used here
presShell->StyleSet()->ResolveServoStyle(*child->AsElement());
^
In file included from ../../../mozilla/layout/generic/nsHTMLCanvasFrame.cpp:9:
../../../mozilla/layout/generic/nsHTMLCanvasFrame.h:29:33: error: unknown type name 'PresShell'
nsIFrame* NS_NewHTMLCanvasFrame(PresShell* aPresShell,
^
| Assignee | ||
Comment 1•6 years ago
|
||
Pushed by dholbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/502d08723c19
Add includes, forward declarations, and namespaces to address non-unified build bustage in layout/{base,build,generic}. r=TYLin
Comment 3•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in
before you can comment on or make changes to this bug.
Description
•