Bug 1544897: Add includes, forward declarations, and namespaces to address non-unified build bustage in layout/{base,build,generic}. r=TYLin

Differential Revision: https://phabricator.services.mozilla.com/D27782